--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,15 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+# no .CSV files at any level
+*.csv
+
+# no .DS_Store files at any level
+.DS_Store
+
+# every folder and file starting with application_ is ignored
+application_*
+nginx_*
+
